# smart-customer-service-platform

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  compose.yaml
backend/: docker-entrypoint.sh  pyproject.toml  pyrightconfig.json
backend/evaluation/: conversation_flow_cases.json  intent_classification_cases.json  knowledge_retrieval_cases.json
backend/src/customer_service/: __init__.py  main.py
backend/src/customer_service/auth/: __init__.py  api.py  session.py
backend/src/customer_service/business/: __init__.py  api.py  service.py
backend/src/customer_service/conversations/: __init__.py  api.py  polisher.py  repository.py  service.py
backend/src/customer_service/entities/: __init__.py  service.py
backend/src/customer_service/intents/: __init__.py  service.py
backend/src/customer_service/knowledge/: __init__.py  chat.py  documents.py  embeddings.py  indexer.py  rag.py  repository.py  service.py  usage.py
backend/src/customer_service/model_usage/: __init__.py  api.py  repository.py
backend/src/script/: build_knowledge_index.py  crawl_bitget_support.py  evaluate_conversation_flows.py  evaluate_intents.py  evaluate_knowledge_search.py  init_database.py  search_knowledge.py  summarize_conversation_traces.py
backend/tests/: test_auth.py  test_business.py  test_conversation_flow_evaluation.py  test_conversations.py  test_entities.py  test_health.py  test_intents.py  test_knowledge_search.py  test_model_usage.py  test_ops.py  test_rag.py
backend/tests/knowledge/: test_documents.py  test_embeddings.py  test_evaluation.py  test_indexer.py
(+150 files in other folders)
