[project]
name = "customer-service"
version = "0.1.0"
description = "Backend service for the smart customer service platform"
readme = "../README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg",
    "fastapi",
    "httpx",
    "redis",
    "sqlalchemy",
    "uvicorn[standard]",
]

[dependency-groups]
dev = [
    "pytest",
]

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
