[project]
name = "customer-service"
version = "0.1.0"
description = "Backend service for the smart customer service platform"
readme = "../README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg",
    "beautifulsoup4",
    "fastapi",
    "httpx",
    "pgvector",
    "redis",
    "sqlalchemy",
    "uvicorn[standard]",
]

[dependency-groups]
dev = [
    "httpx2>=2.4.0",
    "pyright>=1.1.410",
    "pytest",
    "ruff>=0.15.19",
]

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["RUF001", "RUF002", "RUF003"]
